<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="42dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/alata"
                android:text="@string/tabla"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDarkBlue"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    tools:srcCompat="@drawable/darkblue"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvSevera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/severa2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivblue"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/blue"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvDelModerada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/moderada2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivTurquese"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/turque"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvDelLeve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/leve1_2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivGreen"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/darkgreen"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/normal2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivLightGreen"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/green"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvPre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/pre2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivYellow"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/yellow"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvObLeve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/leve2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivOrange"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/orange"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvObModerada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/media2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivRed"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/red"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/tvMor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/morbida2"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/alata"
                android:gravity="end"
                android:text="@string/aceptar"
                android:textAlignment="gravity"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>